<resources>
    <string name="app_name">WeBike</string>
    <string name="register_button_text">Registrar</string>
    <string name="login_button_text">Iniciar Sesion</string>

    <string name="home_menu_config_text">Configuracion</string>
    <string name="view_profile_text">Ver perfil</string>
    <string name="home_menu_logout_text">Cerrar Sesion</string>
    <string name="home_menu_publications_text">Publicaciones</string>
    <string name="home_menu_special_publications_text">Publicaciones especiales</string>
    <string name="home_menu_inbox">Buzón de Mensajes</string>
    <string name="home_menu_search_user">Buscar Usuario</string>

    <string name="logout_dialog_text">¿Deseas cerrar sesión?</string>
    <string name="logout_confirm_text">Si</string>
    <string name="logout_cancel_text">No</string>

    <string name="reg_email_hint">john@example.com</string>
    <string name="reg_firstName_hint">Nombre</string>
    <string name="reg_lastName_hint">Apellido</string>
    <string name="reg_password_hint">123456</string>
    <string name="reg_age_hint">18</string>
    <string name="reg_submit_button_text">Crear Cuenta</string>

    <string name="error_invalid_name">Nombre no puede contener &amp; #$%/()=!¿¡\'.-\? </string>
    <string name="error_invalid_last">Apellido no puede contener &amp; #$%/()=!¿¡\'.-\?</string>
    <string name="error_invalid_email">El correo debe ser valido</string>
    <string name="error_invalid_localization">La ubicación debe ser valida</string>
    <string name="error_invalid_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_invalid_age">La edad debe ser un numero valido</string>
    <string name="error_empty_field">El campo no debe estar vacio</string>

    <string name="menu_goto_planroute">Planear ruta</string>

    <string name="inbox_menu_inbox">Inbox</string>
    <string name="inbox_menu_outbox">Outbox</string>
    <string name="inbox_menu_compose_message">Componer un Mensaje</string>


    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDAVIzbGNqOA9LFAp2dVB44QXCWH3ACCnA</string>
    <string name="google_maps_key2" templateMergeStrategy="preserve" translatable="false">AIzaSyDALonBuIBqBa6sKDlcaxK2AHSSy0dbq6U</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">xjwN7YgyheeGoR6iGBUfKtrqO</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">	iFFUjYuiia1anomZAmFIGoP3l9FP1cpd9UzPA9xL3hOtgAUv6e</string>

    <string name="subject">Asunto:</string>
    <string name="message_content_title">Mensaje:</string>
    <string name="send_message_button_text">Enviar</string>
    <string name="create_group">Crear grupo</string>
    <string name="my_groups">Ver grupos</string>

    <string-array name="genders_array">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <string-array name="manual_titles_array">
        <item>Las vías</item>
        <item>La vestimenta</item>
        <item>Los viajes en grupo</item>
        <item>Seguridad</item>
        <item>Señales de transito</item>
        <item>Sobrepasar</item>
        <item>El casco</item>
        <item>En horas nocturnas</item>
    </string-array>

    <string-array name="manual_array">
        <item>Transita por la derecha de las vías a distancia no mayor de un metro de la acera u orilla y nunca utilices las vías exclusivas para servicio público colectivo.</item>
        <item>Viste chalecos o chaquetas reflectivas de identificación visibles.</item>
        <item>Los conductores que transiten en grupo lo harán uno detrás de otro.</item>
        <item>No debes sujetarte de otro vehículo o viajar cerca de otro carruaje de mayor tamaño que te oculte de la vista de los conductores que transiten en sentido contrario.</item>
        <item>Debes respetar las señales, normas de tránsito y límites de velocidad.</item>
        <item>Siempre utilza el carril libre a la izquierda del vehículo por sobrepasar.</item>
        <item>Conductores y acompañantes deberán utilizar casco de seguridad. La no utilización del mismo dará lugar a la inmovilización del vehículo.</item>
        <item>Cuando circules en horas nocturnas, debes llevar dispositivos en la parte delantera que proyecten luz blanca, y en la parte trasera, que emitan luz roja.</item>
    </string-array>


    <string name="td1">Transita por la derecha de las vías a distancia no mayor de un metro de la acera u orilla y nunca utilices las vías exclusivas para servicio público colectivo.</string>
    <string name="td2">Viste chalecos o chaquetas reflectivas de identificación visibles.</string>
    <string name="td3">Los conductores que transiten en grupo lo harán uno detrás de otro.</string>
    <string name="td4">No debes sujetarte de otro vehículo o viajar cerca de otro carruaje de mayor tamaño que te oculte de la vista de los conductores que transiten en sentido contrario.</string>
    <string name="td5">Debes respetar las señales, normas de tránsito y límites de velocidad.</string>
    <string name="td6">Siempre utilza el carril libre a la izquierda del vehículo por sobrepasar.</string>
    <string name="td7">Conductores y acompañantes deberán utilizar casco de seguridad. La no utilización del mismo dará lugar a la inmovilización del vehículo.</string>
    <string name="td8">Cuando circules en horas nocturnas, debes llevar dispositivos en la parte delantera que proyecten luz blanca, y en la parte trasera, que emitan luz roja.</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus leo quis nisi maximus, a dapibus tellus facilisis. Curabitur semper ac nisl nec dictum. Cras vulputate nibh at felis pellentesque tristique. Aliquam risus orci, pharetra sit amet mollis ut, tristique at est. Sed tortor mi, luctus vitae est nec, ornare fringilla justo. Aenean iaculis eros sit amet congue viverra. Quisque congue nibh in ante aliquam, quis porttitor erat elementum. Nullam ornare, leo pellentesque vulputate fringilla, nulla leo congue magna, vitae pulvinar leo mi quis massa. Nunc nisi odio, imperdiet sit amet congue id, condimentum sed felis. Etiam turpis metus, placerat eget posuere eu, pretium vel turpis. Praesent congue at dui in vehicula. Sed lectus sapien, sollicitudin vitae egestas vel, maximus a dolor. Nullam non nibh eu odio mattis eleifend non in lorem. Aenean pharetra lorem id sapien bibendum consequat. Donec scelerisque tortor quis porta fermentum. Phasellus feugiat congue blandit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus leo quis nisi maximus, a dapibus tellus facilisis. Curabitur semper ac nisl nec dictum. Cras vulputate nibh at felis pellentesque tristique. Aliquam risus orci, pharetra sit amet mollis ut, tristique at est. Sed tortor mi, luctus vitae est nec, ornare fringilla justo. Aenean iaculis eros sit amet congue viverra. Quisque congue nibh in ante aliquam, quis porttitor erat elementum. Nullam ornare, leo pellentesque vulputate fringilla, nulla leo congue magna, vitae pulvinar leo mi quis massa. Nunc nisi odio, imperdiet sit amet congue id, condimentum sed felis. Etiam turpis metus, placerat eget posuere eu, pretium vel turpis. Praesent congue at dui in vehicula. Sed lectus sapien, sollicitudin vitae egestas vel, maximus a dolor. Nullam non nibh eu odio mattis eleifend non in lorem. Aenean pharetra lorem id sapien bibendum consequat. Donec scelerisque tortor quis porta fermentum. Phasellus feugiat congue blandit</string>
</resources>
