<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/publicaciones_menuItem"
        android:title="@string/home_menu_publications_text"/>
    <item
        android:id="@+id/publicaciones_especiales_menuItem"
        android:title="@string/home_menu_special_publications_text"/>
    <item
        android:id="@+id/config_menuItem"
        android:title="@string/home_menu_config_text"/>
    <item
        android:id="@+id/search_user_home_menu"
        android:title="@string/home_menu_search_user"/>
    <item
        android:id="@+id/inbox_home_menu"
        android:title="@string/home_menu_inbox"/>
    <item
        android:id="@+id/go_to_planroute"
        android:title="@string/menu_goto_planroute"/>
    <item
        android:id="@+id/logout_menuItem"
        android:title="@string/home_menu_logout_text"/>
</menu>