<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp">
    <Spinner
        android:id="@+id/friends_spinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
    </Spinner>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/subject"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:textSize="@dimen/textSize"/>
        <EditText
            android:id="@+id/subject_editText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/message_content_title"
        android:gravity="left|center"
        android:textSize="@dimen/textSize"
        />
    <EditText
        android:id="@+id/message_editText"
        android:inputType="textMultiLine"
        android:layout_weight="0.6"
        android:gravity="top|left"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:background="@drawable/white_rectangle"
        android:padding="5dp"
        android:maxLength="400"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"></LinearLayout>
        <Button
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/send_message_button_text"
            android:backgroundTint="@color/WeBikeBlue"
            android:id="@+id/send_msg_button"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"></LinearLayout>
    </LinearLayout>
</LinearLayout>

